fix: improve wrapped Recent News focus outline

--- a/src/components/blogPost/index.scss
+++ b/src/components/blogPost/index.scss
@@ -57,6 +57,7 @@
           text-align: left;
 
           .post-link {
+            display: inline-block;
             color: inherit;
             text-decoration: none;
 
